# AmazonsZero

./: .gitignore  README.md  config.yaml  requirements.txt  setup.py
core/: MCTS.cpp  game_core.cpp  game_core.h  game_core_time.cpp  game_state.cpp  mcts.cpp  mcts.h
core/base/: CMakeLists.txt  amazons.cpp  game.cpp  game.h
core/cpp/: CMakeLists.txt  action_index.cpp  action_index.h  amazons.cpp  amazons_core.cpp  eval.cpp  eval.h  game_core.cpp  game_core.h  mcts.cpp  mcts.h
core/python/: mcts.py  net.py
data/actions/: action.txt
data/game/: amazons.db
model/: net.py  resnet.py
scripts/: test_demo.py
src/: train.py
src/train/: evaluate.py  pre_train.py  train.py
src/training/: evaluate.py  train.py
src/utils/: amazons_database.py  ckpt_manager.py  data_manager.py  data_preprocess_step1.py  data_preprocess_step2.py  data_preprocess_step3.py  data_preprocess_step4.py  database.py  mcts_wrapper.py  uniq.py  visualize.py
